@@ -8,6 +8,7 @@ module ErpOrders
 	  
 	  ActiveSupport.on_load(:active_record) do
       include ErpOrders::Extensions::ActiveRecord::ActsAsOrderTxn
+      include ErpOrders::Extensions::ActiveRecord::ActsAsOrderLineItem
     end
 
     ErpBaseErpSvcs.register_as_compass_ae_engine(config, self)
