@@ -1,0 +1,3 @@
+class WorkOrderItem < ActiveRecord::Base
+  acts_as_order_line_item
+end
