@@ -1,4 +1,5 @@
 Version 3.1.2
+- Added acts_as_order_line_item mixin
 - Changed middleware to insert_before Rack::Runtime instead of Rack::Lock to allow for config.threadsafe!
 Version 3.1.1 - 7-26-2013
 - Added quantity to order_line_items
